--- a/examples/select/index.html
+++ b/examples/select/index.html
@@ -7,7 +7,11 @@
   <title>Hello World</title>
 </head>
 <body>
-  <ar-select></ar-select>
+  <ar-select placeholder="Select">
+    <ar-select-option value="orange">Orange</ar-select-option>
+    <ar-select-option value="apple" selected="true">Apple</ar-select-option>
+    <ar-select-option value="Grape">Grape</ar-select-option>
+  </ar-select>
   <script src="select.js"></script>
 </body>
 </html>
