--- a/examples/counter/index.html
+++ b/examples/counter/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <ar-counter></ar-counter>
-  <script src="counter.js"></script>
+  <script src="index.umd.js"></script>
 </body>
 </html>
