add config to examples, refactor codes, update the config, add npm scripts

--- a/examples/hello-name/index.html
+++ b/examples/hello-name/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <hello-name name="Jane"></hello-name>
-  <script src="hello-name.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
