--- a/examples/hello-world/index.html
+++ b/examples/hello-world/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <hello-world></hello-world>
-  <script src="hello-world.js"></script>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
